--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -6,6 +6,8 @@
 
 	<% else %>
 
+	<%= line_chart @states_chart, ytitle: "net change in covid cases"%> <br>
+
 			<p><b>Here is a list of your Connecticut COVID-19 data by date</b></p>
 			<br>
 
