changed delete all buttons in index viewa to link_to helper to take advantage of pop up for user to confirm deletion

--- a/app/views/counties/index.html.erb
+++ b/app/views/counties/index.html.erb
@@ -10,7 +10,7 @@
 
       <table >
 
-        <%= button_to "Delete All", {:controller => :counties, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br>        
+        <%= link_to "Delete All", {:controller => :counties, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure you want to delete all rows of data?'} %><br>        
 
         <tr>
 
