--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -13,7 +13,7 @@
 
 			<table >
 
-			  <%= button_to "Delete All", {:controller => :states, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br>
+			  <%= link_to "Delete All", {:controller => :states, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure you want to delete all rows of data?'} %><br>
 
 			  <tr>
 			  	<th>Delete</th>
