--- a/app/views/age_groups/index.html.erb
+++ b/app/views/age_groups/index.html.erb
@@ -10,7 +10,8 @@
 
 			<table>
 
-        	  <%= button_to "Delete All", {:controller => :age_groups, :action => :destroy_all}, method: :delete, data: { confirm: "Are you sure?"} %>
+        	  <%= link_to "Delete All", {:controller => :age_groups, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure you want to delete all rows of data?'} %><br>        
+
         	  <br> 				
 
 			  <tr>
