--- a/app/views/gender_cases/index.html.erb
+++ b/app/views/gender_cases/index.html.erb
@@ -10,7 +10,7 @@
 
 			<table>
 
-        	  <%= button_to "Delete All", {:controller => :gender_cases, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br> 				
+        	  <%= link_to "Delete All", {:controller => :gender_cases, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure you want to delete all rows of data?'} %><br> 				
 
 			  <tr>
 
