--- a/app/views/towns/index.html.erb
+++ b/app/views/towns/index.html.erb
@@ -12,7 +12,7 @@
 
       <table >
 
-        <%= button_to "Delete All", {:controller => :towns, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure?'} %><br>         
+        <%= link_to "Delete All", {:controller => :towns, :action => :destroy_all}, :method => 'delete', data: { confirm: 'Are you sure you want to delete all rows of data?'} %><br>         
 
         <tr>
 
