--- a/app/views/states/summary.html.erb
+++ b/app/views/states/summary.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/pageinfo", locals: {pagetitle: request.original_url.split("/").last.titleize} %> 
+<%= render partial: "shared/pageinfo", locals: {pagetitle: "Summary Page"} %> 
 
 <p><b>CT Vaccine data as of <%= Time.parse(@vaccine_summary.date_updated.to_s).localtime.strftime('%A %B %e, %Y') %></b></p>
 
