fixed bug in comments controller update action would not redirect

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,5 @@
  
- <%= form_with model: @comment, url: post_comment_path, method: "patch" do |f| %>
+ <%= form_for(@comment, url: post_comment_path, method: "patch") do |f| %>
 
    <div class="field">
        <%= f.label "comment" %><br />
